<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  tools:context=".controller.MainActivity">

  <ImageView
    android:id="@+id/space_station_image"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@+id/planet_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <TextView
    android:id="@+id/planet_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/space_station_image"
    app:layout_constraintBottom_toTopOf="@id/resource_needed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/planet_name"
    android:textSize="32sp"
    android:textAlignment="center"/>

  <TextView
    android:id="@+id/resource_needed"
    android:layout_width="0dp"
    android:layout_height="125dp"
    app:layout_constraintTop_toBottomOf="@id/planet_name"
    app:layout_constraintEnd_toStartOf="@+id/ship_status"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/resource_available"
    android:text="@string/resource_needed"
    android:textAlignment="center"/>
  <TextView
    android:id="@+id/resource_available"
    android:layout_width="0dp"
    android:layout_height="125dp"
    app:layout_constraintTop_toBottomOf="@id/resource_needed"
    app:layout_constraintBottom_toTopOf="@id/damage_taken"
    app:layout_constraintEnd_toStartOf="@+id/mine_planet"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/resource_inventory"
    android:textAlignment="center"/>
  <TextView
    android:id="@+id/damage_taken"
    android:layout_width="0dp"
    android:layout_height="125dp"
    app:layout_constraintTop_toBottomOf="@id/resource_available"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/next_planet"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/damage_taken"
    android:textAlignment="center"/>
  <Button
    android:id="@+id/ship_status"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/planet_name"
    app:layout_constraintStart_toEndOf="@id/resource_needed"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/mine_planet"
    android:text="@string/ship_status"
    />
  <Button
    android:id="@+id/mine_planet"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/ship_status"
    app:layout_constraintStart_toEndOf="@id/resource_available"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/next_planet"
    android:text="@string/mine_planet"
    />
  <Button
    android:id="@+id/next_planet"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/mine_planet"
    app:layout_constraintStart_toEndOf="@id/resource_available"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:text="@string/next_planet"
    />








</androidx.constraintlayout.widget.ConstraintLayout>