<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_height="match_parent"
  android:layout_width="match_parent"
  tools:context=".controller.MainActivity">

  <ImageView
    android:id="@+id/space_station_image"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@+id/space_station_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <TextView
    android:id="@+id/space_station_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/space_station_image"
    app:layout_constraintBottom_toTopOf="@id/free_resource"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/space_station"
    android:textSize="32sp"
    android:textAlignment="center"/>

  <Button
    android:id="@+id/free_resource"
    android:layout_width="0dp"
    android:layout_height="125dp"
    app:layout_constraintTop_toBottomOf="@id/space_station_text"
    app:layout_constraintEnd_toStartOf="@+id/depart"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@id/first_planet"
    android:text="@string/free_resource"
    android:textAlignment="center"/>
  <Button
    android:id="@+id/first_planet"
    android:layout_width="0dp"
    android:layout_height="125dp"
    app:layout_constraintTop_toBottomOf="@id/free_resource"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/depart"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/free_resource"
    android:textAlignment="center"/>
  <Button
    android:id="@+id/depart"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/space_station_text"
    app:layout_constraintStart_toEndOf="@id/free_resource"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:text="@string/depart"
    />








</androidx.constraintlayout.widget.ConstraintLayout>